@@ -1,3 +1,7 @@
+2001-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Use PREINSTALL_FILES = to make automake-1.5 happy.
+
 2001-09-19	Eric Norum <eric.norum@usask.ca>
 
 	* lib/tftpDriver.c: Add some debugging capability.
